--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
   </head>
   <body>
-    <img src="Images_2/Galya_Bigman_NBG.png" alt="An image of Galya" />
+    <img src="Images_2/Galya_Bigman_NBG.png" alt="An image of Galya_Bigman" />
     <p>@galyabig</p>
     <p class="username">Join Our New Research Today</p>
     <p>For more information Call: 512-576-3823</p>
